# course_work_5

./: .gitignore  READMY.md  anec.py  cls.py  main.py  pyproject.toml
utils/: create_db.py  utils.py
